# stock-analyzer

./: .gitignore  CLAUDE.md
signalforge/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
signalforge/alembic/: env.py
signalforge/alembic/versions/: 001_initial.py  002_add_price_and_composite_to_signals.py
signalforge/backend/: Dockerfile  config.template.py  main.py
signalforge/backend/agents/: graph.py  llm_client.py  market_agent.py  news_sentiment_agent.py  sector_agent.py  state.py  stock_agent.py
signalforge/backend/cache/: redis_client.py
signalforge/backend/data/: finviz_data.py  fundamentals_data.py  market_data.py  sector_data.py  stock_data.py  stock_data.py.backup2  stocktwits_data.py  tipranks_data.py
signalforge/backend/db/: models.py  session.py
signalforge/backend/routers/: analysis.py  stream.py
signalforge/backend/signal/: engine.py  models.py
signalforge/backend/tests/: test_stocktwits_data.py
signalforge/frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
signalforge/frontend/src/: App.tsx  index.css
signalforge/frontend/src/components/: ConfidenceBreakdown.tsx  FundamentalPanel.tsx  MarketOverview.tsx  NewsSentimentPanel.tsx  PerformanceReport.tsx  SectorHeatmap.tsx  SentimentPanel.tsx  SignalCard.tsx  StockChart.tsx  StreamingLog.tsx
signalforge/frontend/src/hooks/: useAnalysis.ts  usePerformance.ts  useWebSocket.ts
signalforge/frontend/src/lib/: api.ts
signalforge/frontend/src/types/: signal.ts
tests/: test_stock_data.py  (+1 more)
(+2 files in other folders)
