[project]
name = "signalforge"
version = "0.1.0"
description = "Trading analysis application with AI agents"
authors = [{name = "SignalForge Team"}]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "langgraph>=0.0.35",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "openai>=1.3.0",
    "yfinance==0.1.63",
    "alpaca-py>=0.9.0",
    "fredapi>=0.3.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "ta>=0.11.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "redis>=4.6.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.12.0",
    "python-multipart>=0.0.6",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend", "frontend"]

[tool.uv]
sources = {}